# gigs-submission

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
research/: 00_gigs_facts.md
task1_audit/: 01_TASK1_AUDIT.md  __init__.py  demo.py  escalation_context.py  failure_taxonomy.py  grounding_check.py  kb_freshness_watcher.py
task1_audit/tests/: test_escalation_context.py  test_failure_taxonomy.py  test_grounding_check.py  test_kb_freshness_watcher.py
task2_cashcard/: 02_TASK2_CASHCARD.md  __init__.py  cashcard_config.py  demo.py  escalation_triggers.py  go_live_checklist.py  kb_gap_analyzer.py  kb_seed_from_api.py  week1_canaries.py
task2_cashcard/eval/: __init__.py  eval_runner.py  gold_set.yaml
task2_cashcard/kb_skeleton/: README.md
task2_cashcard/kb_skeleton/01_esim_activation/: install_android_first_time.md  install_ios_first_time.md  refusal_unsupported_device.md  transfer_between_devices.md  troubleshooting_no_signal.md
task2_cashcard/kb_skeleton/02_plan_questions/: changing_plan.md  data_usage_freshness.md  (+2 more)
task2_cashcard/tests/: fixtures.py  test_cashcard_config.py  test_demo.py  test_escalation_triggers.py  test_eval_runner.py  test_go_live_checklist.py  test_kb_gap_analyzer.py  test_kb_seed_from_api.py  test_week1_canaries.py
task3_eval_expansion/: 03_TASK3_EVAL.md  demo.py  expansion_track.py  gap_decomposition.py  lever_simulator.py  q3_commit.py
task3_eval_expansion/tests/: test_expansion_track.py  test_gap_decomposition.py  test_lever_simulator.py  test_q3_commit.py
task4_architecture/: 04_TASK4_ARCHITECTURE.md
(+12 files in other folders)
