[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gigs-submission"
version = "0.1.0"
description = "Fahad Kiani — Gigs Support Platforms Engineer take-home submission"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Fahad Kiani" },
]
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "PyYAML>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["task1_audit", "task2_cashcard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"task1_audit/tests/*" = ["B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = '/tests/'

[tool.pytest.ini_options]
testpaths = ["task1_audit/tests", "task2_cashcard/tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
